=== What's new in 2.0

==== Support for Kafka timestamps

`KafkaTemplate` now supports API to add records with timestamps.
New `KafkaHeaders` have been introduced regarding `timestamp` support.
Also new `KafkaConditions.timestamp()` and `KafkaMatchers.hasTimestamp()` testing utilities have been added.
See <<kafka-template>>, <<kafka-listener-annotation>> and <<testing>> for more details.

==== @KafkaListener Changes

You can now configure a `KafkaListenerErrorHandler` to handle exceptions.
See <<annotation-error-handling>> for more information.

You can now annotate `@KafkaListener` methods (and classes, and `@KafkaHandler` methods) with `@SendTo`.
If the method returns a result, it is forwarded to the specified topic.
See <<annotation-send-to>> for more information.

==== Message Listeners

Message listeners can now be aware of the `Consumer` object.
See <<message-listeners>> for more information.

==== ConsumerAwareRebalanceListener

Rebalance listeners can now access the `Consumer` object during rebalance notifications.
See <<rebalance-listeners>> for more information.

==== @EmbeddedKafka Annotation

For convenience a test class level `@EmbeddedKafka` annotation is provided with the purpose to register `KafkaEmbedded` as a bean.
See <<testing>> for more information.

==== Kerberos Configuration

Support for configuring Kerberos is now provided.
See <<kerberos>> for more information.