@@ -252,14 +252,8 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 					});
 			if (hasClassLevelListeners) {
 				Set<Method> methodsWithHandler = MethodIntrospector.selectMethods(targetClass,
-						new ReflectionUtils.MethodFilter() {
-
-							@Override
-							public boolean matches(Method method) {
-								return AnnotationUtils.findAnnotation(method, KafkaHandler.class) != null;
-							}
-
-						});
+						(ReflectionUtils.MethodFilter) method ->
+								AnnotationUtils.findAnnotation(method, KafkaHandler.class) != null);
 				multiMethods.addAll(methodsWithHandler);
 			}
 			if (annotatedMethods.isEmpty()) {
@@ -369,10 +363,10 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 			catch (NoSuchMethodException ex) {
 				throw new IllegalStateException(String.format(
 						"@KafkaListener method '%s' found on bean target class '%s', " +
-						"but not found in any interface(s) for bean JDK proxy. Either " +
-						"pull the method up to an interface or switch to subclass (CGLIB) " +
-						"proxies by setting proxy-target-class/proxyTargetClass " +
-						"attribute to 'true'", method.getName(), method.getDeclaringClass().getSimpleName()), ex);
+								"but not found in any interface(s) for bean JDK proxy. Either " +
+								"pull the method up to an interface or switch to subclass (CGLIB) " +
+								"proxies by setting proxy-target-class/proxyTargetClass " +
+								"attribute to 'true'", method.getName(), method.getDeclaringClass().getSimpleName()), ex);
 			}
 		}
 		return method;
@@ -383,10 +377,11 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 		endpoint.setBean(bean);
 		endpoint.setMessageHandlerMethodFactory(this.messageHandlerMethodFactory);
 		endpoint.setId(getEndpointId(kafkaListener));
+		endpoint.setGroupId(getEndpointGroupId(kafkaListener, endpoint.getId()));
 		endpoint.setTopicPartitions(resolveTopicPartitions(kafkaListener));
 		endpoint.setTopics(resolveTopics(kafkaListener));
 		endpoint.setTopicPattern(resolvePattern(kafkaListener));
-		String group = kafkaListener.group();
+		String group = kafkaListener.containerGroup();
 		if (StringUtils.hasText(group)) {
 			Object resolvedGroup = resolveExpression(group);
 			if (resolvedGroup instanceof String) {
@@ -418,6 +413,17 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 		else {
 			return "org.springframework.kafka.KafkaListenerEndpointContainer#" + this.counter.getAndIncrement();
 		}
+	}
+
+	private String getEndpointGroupId(KafkaListener kafkaListener, String id) {
+		String groupId = null;
+		if (StringUtils.hasText(kafkaListener.groupId())) {
+			groupId = resolveExpressionAsString(kafkaListener.groupId(), "groupId");
+		}
+		if (groupId == null && kafkaListener.idIsGroup()) {
+			groupId = id;
+		}
+		return groupId;
 	}
 
 	private TopicPartitionInitialOffset[] resolveTopicPartitions(KafkaListener kafkaListener) {
@@ -490,7 +496,7 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 			else {
 				throw new IllegalArgumentException(String.format(
 						"@PartitionOffset for topic '%s' can't resolve '%s' as an Integer or String, resolved to '%s'",
-							topic, partitionOffset.partition(), partitionValue.getClass()));
+						topic, partitionOffset.partition(), partitionValue.getClass()));
 			}
 
 			Object initialOffsetValue = resolveExpression(partitionOffset.initialOffset());
@@ -506,7 +512,7 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 			else {
 				throw new IllegalArgumentException(String.format(
 						"@PartitionOffset for topic '%s' can't resolve '%s' as a Long or String, resolved to '%s'",
-							topic, partitionOffset.initialOffset(), initialOffsetValue.getClass()));
+						topic, partitionOffset.initialOffset(), initialOffsetValue.getClass()));
 			}
 
 			Object relativeToCurrentValue = resolveExpression(partitionOffset.relativeToCurrent());
@@ -520,7 +526,7 @@ public class KafkaListenerAnnotationBeanPostProcessor<K, V>
 			else {
 				throw new IllegalArgumentException(String.format(
 						"@PartitionOffset for topic '%s' can't resolve '%s' as a Boolean or String, resolved to '%s'",
-							topic, partitionOffset.relativeToCurrent(), relativeToCurrentValue.getClass()));
+						topic, partitionOffset.relativeToCurrent(), relativeToCurrentValue.getClass()));
 			}
 
 			TopicPartitionInitialOffset topicPartitionOffset =
