@@ -863,7 +863,7 @@ public class KafkaMessageListenerContainerTests {
 		DefaultKafkaConsumerFactory<Integer, String> cf = new DefaultKafkaConsumerFactory<Integer, String>(props) {
 
 			@Override
-			public Consumer<Integer, String> createConsumer(String clientIdPrefix) {
+			public Consumer<Integer, String> createConsumer(String groupId, String clientIdPrefix) {
 				return new KafkaConsumer<Integer, String>(props) {
 
 					@Override
